--- a/README.Rmd
+++ b/README.Rmd
@@ -39,10 +39,10 @@ Here's an example with abalone data in which we use `misl()` imputation and then
 library(misl)
 set.seed(123)
 
-misl_imp <- misl(abalone, maxit = 2, m = 2, quiet = TRUE,
-                  con_method = c("Lrnr_glm_fast", "Lrnr_mean"),
-                  bin_method = c("Lrnr_mean", "Lrnr_glm_fast"),
-                  cat_method = c("Lrnr_independent_binomial", "Lrnr_mean"))
+misl_imp <- misl(abalone, maxit = 20, m = 10, quiet = TRUE,
+    con_method = c("Lrnr_glm_fast", "Lrnr_earth", "Lrnr_ranger"),
+    bin_method = c("Lrnr_earth", "Lrnr_glm_fast", "Lrnr_ranger"),
+    cat_method = c("Lrnr_independent_binomial", "Lrnr_ranger"))
 
 misl_modeling <- lapply(misl_imp, function(y){
   stats::lm(Whole_Weight ~ Sex + Length + Diameter + Height + Older_12, data = y$datasets)
